<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.itakg.timerapp.TimerMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="#def"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:text="@string/Total"
            android:textColor="@color/colorPrimary"
            android:typeface="serif"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Left"
            android:typeface="serif"
            android:textColor="@color/colorPrimary"
            android:padding="30dp"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Result"
            android:typeface="serif"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:padding="30dp"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/dismiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:typeface="serif"
            android:background="#ffff0000"
            android:padding="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:text="@string/Dismiss"
            android:visibility="invisible"
            android:onClick="dismiss"/>

        <Button
            android:id="@+id/startAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:typeface="serif"
            android:background="#ffff0000"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:text="@string/Back"
            android:visibility="invisible"
            android:onClick="startAgain"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
