<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.itakg.timerapp.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/Title"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:typeface="serif" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/image"
            android:layout_weight="0.20" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="20dp"
            android:text="@string/Ques"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:typeface="serif" />

        <EditText
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:background="#def"
            android:ems="10"
            android:inputType="textPersonName"
           android:text="0" />

        <Button
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/Start"
            android:textColor="#ffffff"
            android:onClick="Start"
            android:textSize="20sp"
            android:typeface="serif"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
